plugins {
    id 'java'
    id 'org.springframework.boot' version '2.0.3.RELEASE'
}

group 'org.htpllang'
version '0.1'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

bootRun {
    systemProperties System.properties
}

dependencies {
    compile "org.springframework.boot:spring-boot-starter-web:2.0.3.RELEASE"

    compile "dom4j:dom4j:1.6.1"
}